tests/test49.rael.exp
Error [tests/test49.rael:3:5]: '^' is outside of a routine and a match statement
|     ^ "21"
|     ^
