tests/test49.rael
if 2 * 7 = 14 {
    log 32
    ^ "21"
}